k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress-app

---
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflare
